fix: degrease gap

--- a/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
+++ b/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
@@ -89,7 +89,6 @@
     &--movable {
         font-size: 1.25rem;
         margin-top: 0.25rem;
-        margin-right: 0.25rem;
 
         &:hover {
             cursor: move;
